--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -118,6 +118,9 @@
     <string name="approvals">My Approvals</string>
     <string name="more">More</string>
     <string name="about">About</string>
+    <string name="pending">Pending</string>
+    <string name="approved">Approved</string>
+    <string name="rejected">Rejected</string>
 
     <string-array name="service_menus">
         <item>@string/leave_tracker</item>
