--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -18,5 +18,7 @@
     <string name="approvals">My Approvals</string>
     <string name="about">About</string>
     <string name="no_records_found">No records found</string>
+    <string name="about_description"><![CDATA[ This app is an example app required for completing after-interview test with specific predefined requirements.
+    \nAll the icons used here is credit to <a href="https://www.flaticon.com/authors/itim2101" title="itim2101">itim2101</a> from <a href="https://www.flaticon.com/" title="Flaticon">www.flaticon.com</a> ]]></string>
 
 </resources>
